fix badges padding and spacing

--- a/app/assets/stylesheets/components/_badges.sass
+++ b/app/assets/stylesheets/components/_badges.sass
@@ -6,10 +6,9 @@
   +font-size(12)
   @extend %rounded-corners
   text-transform: uppercase
-  padding: 0 4px
+  padding: 0 5px
   color: #fff
   font-weight: bold
-  letter-spacing: 0.1em
   line-height: 12px
 
 .badge--green
